Fix analyze code issues