@@ -16,42 +16,26 @@ limitations under the License.
 
 package org.frankframework.frankdoc.model;
 
-import static java.util.stream.Collectors.groupingBy;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.function.Predicate;
-import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.Setter;
+import lombok.extern.log4j.Log4j2;
 import org.frankframework.frankdoc.Utils;
 import org.frankframework.frankdoc.feature.Deprecated;
 import org.frankframework.frankdoc.feature.Description;
 import org.frankframework.frankdoc.feature.Notes;
 import org.frankframework.frankdoc.feature.Protected;
 import org.frankframework.frankdoc.model.ElementChild.AbstractKey;
-import org.frankframework.frankdoc.wrapper.FrankAnnotation;
-import org.frankframework.frankdoc.wrapper.FrankClass;
-import org.frankframework.frankdoc.wrapper.FrankDocException;
-import org.frankframework.frankdoc.wrapper.FrankEnumConstant;
-import org.frankframework.frankdoc.wrapper.FrankMethod;
-import org.frankframework.frankdoc.wrapper.FrankType;
+import org.frankframework.frankdoc.wrapper.*;
+import org.jspecify.annotations.NonNull;
 
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.Setter;
-import lombok.extern.log4j.Log4j2;
+import java.util.*;
+import java.util.function.Predicate;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.groupingBy;
 
 /**
  * Models a Java class that can be referred to in a Frank configuration.
@@ -66,7 +50,6 @@ public class FrankElement implements Comparable<FrankElement> {
 	public static final String JAVADOC_FORWARDS_ANNOTATION_CLASSNAME = "org.frankframework.doc.Forwards";
 	public static final String JAVADOC_LABEL_ANNOTATION_CLASSNAME = "org.frankframework.doc.Label";
 	public static final String JAVADOC_SEE = "@see";
-	public static final String LABEL = "org.frankframework.doc.Label";
 	public static final String LABEL_NAME = "name";
 
 	private static final Pattern JAVADOC_SEE_PATTERN = Pattern.compile("<a href=[\"'](.*?)[\"']>(.*?)<\\/a>(.*)");
@@ -92,7 +75,7 @@ public class FrankElement implements Comparable<FrankElement> {
 
 	// True if this FrankElement corresponds to a class that implements a Java interface
 	// that we model with an ElementType. This means: The Java interface only counts
-	// if it appears as argument type of a config child setter.
+	// if it appears as argument type of config child setter.
 	private @Getter @Setter(AccessLevel.PACKAGE) boolean interfaceBased = false;
 
 	// Represents the Java superclass.
@@ -418,7 +401,7 @@ public class FrankElement implements Comparable<FrankElement> {
 			throw new IllegalStateException(String.format("FrankElement [%s] has more then one possible XML element name: [%s]",
 				fullName, String.join(", ", xmlElementNames)));
 		}
-		return xmlElementNames.get(0);
+		return xmlElementNames.getFirst();
 	}
 
 	public void setAttributes(List<FrankAttribute> inputAttributes) {
@@ -442,7 +425,6 @@ public class FrankElement implements Comparable<FrankElement> {
 		return getChildrenOfKind(filter, FrankAttribute.class);
 	}
 
-	@SuppressWarnings("unchecked")
 	public <T extends ElementChild> List<T> getChildrenOfKind(Predicate<ElementChild> selector, Class<T> kind) {
 		Map<? extends AbstractKey, ? extends ElementChild> lookup = allChildren.get(kind);
 		return lookup.values().stream()
@@ -503,11 +485,11 @@ public class FrankElement implements Comparable<FrankElement> {
 	}
 
 	public List<ConfigChild> getCumulativeConfigChildren(Predicate<ElementChild> selector, Predicate<ElementChild> rejector) {
-		return new ArrayList<>(getCumulativeChildren(selector, rejector, ConfigChild.class));
+		return getCumulativeChildren(selector, rejector, ConfigChild.class);
 	}
 
 	public List<FrankAttribute> getCumulativeAttributes(Predicate<ElementChild> selector, Predicate<ElementChild> rejector) {
-		return new ArrayList<>(getCumulativeChildren(selector, rejector, FrankAttribute.class));
+		return getCumulativeChildren(selector, rejector, FrankAttribute.class);
 	}
 
 	private <T extends ElementChild> List<T> getCumulativeChildren(Predicate<ElementChild> selector, Predicate<ElementChild> rejector, Class<T> kind) {
@@ -639,7 +621,7 @@ public class FrankElement implements Comparable<FrankElement> {
 	}
 
 	@Override
-	public int compareTo(FrankElement other) {
+	public int compareTo(@NonNull FrankElement other) {
 		return COMPARATOR.compare(this, other);
 	}
 
